--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ repository               : "lpantano/academicpages"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-theme                    : minimal-mistakes-jekyll
+# theme                    : minimal-mistakes-jekyll
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
