try to fix logo

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ title                    : "Lorena Pantano / bits of my work"
 title_separator          : "-"
 name                     : &name "Lorena Pantano Rubino"
 description              : &description "personal description"
+site-logo                : "images/site-logo.png"
 url                      : https://lpantano.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lpantano/lpantano.github.io"
