--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 # Site Author
 author:
   name             : "L Pantano"
-  avatar           : "lorena.jpg"
-  bio              : "Research Associate"
+  avatar           : "avatar_prof_crop.png"
+  bio              : "Research Scientist"
   location         : "Boston"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=MeQGlRwAAAAJ&hl=en"
